--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
     padding: 0;
 }
 :root{
-    --background-color:white;
+    --background-color: #fffafafa;
     --title-color: #a189fa;
     --primary-color: #1D1A1A;
 
