--- a/styles/index.css
+++ b/styles/index.css
@@ -158,15 +158,21 @@ html{
     padding: 20px;
     color: var(--primary-color);
 
-    transition: 0.4s;
+    transition: 0.6s;
+    transition: transform 0.4s;
+    transform: translateX(0) scale(1);
 }
-.repos .repo:hover{
+.repos .repo:hover, .repo:focus{
     background-color: var(--title-color);
     border: 1px solid var(--background-color);
     color: var(--primary-color);
 
     opacity: 80%;
+
+    transform: scale(1.02);
+    
 }
+
 .repo p{
     font-size: 15px;
 }
