--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,6 +3,7 @@
     padding: 5px;
     text-align: center;
     margin-top: 50px;
+    margin: 0 auto;
 }
 
  #footer p{
@@ -20,7 +21,7 @@
 
 @media screen and (max-width: 769px){
     #footer{
-        width: 280vw;
+        width: 300vw;
     }
     #footer p{
         font-size: 25px;
